--- a/src/app/modules/vendor-portal/views/questionnaire/questionnaire.component.html
+++ b/src/app/modules/vendor-portal/views/questionnaire/questionnaire.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" (click)="openModal()" role="button">Start Questionnaire</button>
+<button type="button" class="btn btn-black" (click)="openModal()" role="button">Start Questionnaire</button>
 
 
 <!-- Modal Component -->
