--- a/src/assets/theme/gsa.css
+++ b/src/assets/theme/gsa.css
@@ -170,6 +170,14 @@ html, body {
     background-repeat: no-repeat;
     color: white;
 }
+.toolbox3-img {
+    background-image: url(../images/bg-art/toolbox-8.jpg);
+    box-shadow: 0px 1200px #3d4551de inset;
+    background-position: right bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+}
 
 .shadow {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
