--- a/src/app/modules/vendor-portal/views/home/home.component.html
+++ b/src/app/modules/vendor-portal/views/home/home.component.html
@@ -29,14 +29,14 @@
    
 
       
-    <h1 class="white font-weight-bold">Offer & Mods Toolbox</h1>
+    <h1 class="white font-weight-bold">Vendor Toolbox</h1>
     
  
    
     <div class="row">
 
 
-      <div class="col-lg-12 col-xl-3 pt-3 border-right">
+      <div class="col-lg-12 col-xl-3 pt-3 border-right border-gsa-light-blue">
         <div class="mb-3 ">  
           
           <h3 class="white">Everything you need to...</h3>
@@ -45,7 +45,7 @@
           </p>
           <div class="col-sm-12 col-xl-12 pt-3 px-0 h-100">
             <div class="mb-3"> 
-            <hr class="bg-gsa-light-blue mb-4  mt-0 border-bottom" /> 
+            <hr class="bg-gsa-light-blue mb-4  mt-0 border-bottom border-gsa-light-blue" /> 
               <h3 class="white d-inline-block"><div class="fal fa-file-contract" style="width: 2.4rem;"></div> MAS Modifications</h3>
               <p class="ml-5 d-inline-block">Review and accept MAS Modifications</p>
               <a class="btn btn-secondary ml-5">Get started</a>
@@ -57,9 +57,9 @@
         
 
         <div class="row justify-content-lg-center">
-          <div class="col-sm-12 col-xl pt-3 border-right pl-4 h-100">
+          <div class="col-sm-12 col-xl pt-3 border-right border-gsa-light-blue pl-4 h-100">
             <div class="mb-3 ">  
-              <h3 class="white"><div class="fal fa-file-spreadsheet" style="width: 2.4rem;"></div> Offers</h3>
+              <h3 class="white"><div class="fal fa-hand-holding-box" style="width: 2.4rem;"></div> Offers</h3>
               <ul class="list-unstyled ml-5">
                 <li><a routerLink="/app-understanding-contracts" class="white">Start a new Offer</a></li>
                 <li><a routerLink="/app-where-to-begin" class="white">Edit an existing Offer</a></li>
@@ -77,7 +77,7 @@
           
           <div class="col-sm-12 col-xl pt-3 pl-4 h-100  ">
             <div class="mb-3">  
-              <h3 class="white"><span class="fal fa-file-invoice-dollar" style="width: 2.4rem;"></span> Order Management</h3>
+              <h3 class="white"><span class="fal fa-file-invoice" style="width: 2.4rem;"></span> Order Management</h3>
               <ul class="list-unstyled ml-5">
                 <li><a href="" class="white">View Active POs</a></li>
                 <li><a href="" class="white">View Completed POs</a></li>
@@ -87,7 +87,7 @@
             </div>
           </div>
 
-          <div class="col-sm-12 col-xl pt-3 pl-4 h-100 border-left ">
+          <div class="col-sm-12 col-xl pt-3 pl-4 h-100 border-left border-gsa-light-blue ">
             <div class="mb-3">  
               <h3 class="white"><span class="fal fa-file-invoice-dollar" style="width: 2.4rem;"></span> Sales Reporting</h3>
               <ul class="list-unstyled ml-5">
