partial checkin of UI fixes to the form.

--- a/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/commercial-sales-practice/commercial-sales-practice.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/commercial-sales-practice/commercial-sales-practice.component.html
@@ -9,7 +9,7 @@
                 title: section.title, 
                 sectionStatus: section.sectionStatus, 
                 parentOfferStatus: section.offerStatus, 
-                isStickyTop: true, 
+                isStickyTop: false, 
                 showSection: section.showSection
             }"  
         >
