--- a/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/ordering-information/ordering-information.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/ordering-information/ordering-information.component.html
@@ -10,7 +10,7 @@
                 title: remittanceAddressSection.title, 
                 sectionStatus: remittanceAddressSection.sectionStatus, 
                 parentOfferStatus: remittanceAddressSection.offerStatus, 
-                isStickyTop: true, 
+                isStickyTop: false, 
                 showSection: remittanceAddressSection.showSection
             }"  
         >
