--- a/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/basic-information/certification-responsibility-matters/certification-responsibility-matters.component.html
+++ b/src/app/modules/offer-portal/views/offer-form/solicitation-clauses/basic-information/certification-responsibility-matters/certification-responsibility-matters.component.html
@@ -5,7 +5,7 @@
             title: section.title, 
             sectionStatus: section.sectionStatus, 
             parentOfferStatus: section.offerStatus, 
-            isStickyTop: true, 
+            isStickyTop: false, 
             showSection: section.showSection
         }"  
     >
